fix: set links to open in new page
And change the favicon icon

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				<a href="index.html" class="navbar__logo">Frintern</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="https://medium.com/frintern/meet-frintern-a-better-way-to-learn-4509754b48ee">ABOUT</a></li>
-						<li><a href="https://github.com/frintern/skill-checker-testing/issues/new">LEAVE FEEDBACK</a></li>
-						<li><a href="https://frintern-pathfinder.herokuapp.com/quiz">GET STARTED</a></li>
+						<li><a href="https://medium.com/frintern/meet-frintern-a-better-way-to-learn-4509754b48ee" target="_blank">ABOUT</a></li>
+						<li><a href="https://github.com/frintern/skill-checker-testing/issues/new" target="_blank">LEAVE FEEDBACK</a></li>
+						<li><a href="https://frintern-pathfinder.herokuapp.com/quiz" target="_blank">GET STARTED</a></li>
 						
 					</ul>
 				</nav>
@@ -37,7 +37,7 @@
 					<div class="hero__content__inner" id='navConverter'>
 						<h1 class="hero__title">GET A CAREER THAT FITS YOU</h1>
 						<p class="hero__text">Frintern is a personalised tech and business career accelerator for the way we work now. Find, grow and land a career you love at no cost to you.</p>
-						<a href="https://frintern-pathfinder.herokuapp.com/quiz" class="button button__accent">Find your career fit</a>
+						<a href="https://frintern-pathfinder.herokuapp.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 						<a href="#scrollToNext" class="button hero__button">Learn more</a>
 					</div>
 				</div>
@@ -124,7 +124,7 @@
 			<div class="cta__inner">
 				<h2 class="cta__title">Get started now</h2>
 				<p class="cta__sub cta__sub--center">Click the button below and start your journey to land your dream job.</p>
-				<a href="#" class="button button__accent">Find your career fit</a>
+				<a href="https://frintern-pathfinder.herokuapp.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 			</div>
 		</div>
 	</div>
@@ -136,7 +136,7 @@
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							By <a href="https://frintern.com" target="_blank" class="footer__link">Frintern</a> with Love.
+							By <a href="https://frintern.com" class="footer__link">Frintern</a> with Love.
 						</div>
 					</div>
 					<div class="footer__data__item">
