fix: added link for favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<!-- Don't forget to add your metadata here -->
 	<meta name="description" content="Frintern is a fast, free and personalised tech career accelerator. Find and grow in a career you love.">
 	<link rel='stylesheet' href='css/style.min.css' />
+	<link rel="icon" href="favicon.png">
 </head>
 <body>
 	<!-- Hero(extended) navbar -->
