--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<ul>
 						<li><a href="https://medium.com/frintern/meet-frintern-a-better-way-to-learn-4509754b48ee" target="_blank">ABOUT</a></li>
 						<li><a href="https://github.com/frintern/skill-checker-testing/issues/new" target="_blank">LEAVE FEEDBACK</a></li>
-						<li><a href="https://frintern-pathfinder.herokuapp.com/quiz" target="_blank">START HERE</a></li>
+						<li><a href="http://pathfinder.byfrintern.com/quiz" target="_blank">START HERE</a></li>
 
 					</ul>
 				</nav>
