--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
 		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="index.html" class="navbar__logo">Frintern</a>
+				<a href="index.html"><img src="images/Frintern Full Logo Revisited.png" class="logo" /></a>
 				<nav class="navbar__menu">
 					<ul>
 						<li><a href="https://medium.com/frintern/meet-frintern-a-better-way-to-learn-4509754b48ee" target="_blank">ABOUT</a></li>
 						<li><a href="https://github.com/frintern/skill-checker-testing/issues/new" target="_blank">LEAVE FEEDBACK</a></li>
 						<li><a href="http://pathfinder.byfrintern.com/quiz" target="_blank">START HERE</a></li>
-
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id="toggle"><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
@@ -140,7 +139,7 @@
 							<div class="footer footer--dark">
 								<div class="container">
 									<div class="footer__inner">
-										<a href="index.html" class="footer__textLogo">Frintern</a>
+										<a href="index.html" class="footer__textLogo"><img src="images/Frintern Negative Full Logo Revisited.png" class="logo" /></a>
 										<div class="footer__data">
 											<div class="footer__data__item">
 												<div class="footer__row">
