chore(seo): added meta details, keywords and tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,59 @@
 <head>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<title>Learn Software Development, Design, Management and Marketing Free | Frintern</title>
+	<title>Learn Software Development, Design, Management and Digital Marketing Free | Frintern</title>
 	<!-- Don't forget to add your metadata here -->
-	<meta name="description" content="Frintern is a fast, free and personalised tech career accelerator. Find and grow in a career you love.">
+	<meta name="description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
+	<meta name="keywords" content="how to get into tech, find your fit in tech, find your career fit, find your job fit, career path, digital marketing course, ui/ux course, web development course, project management course, design course, free tech course, free tech pathfinder, jobs in nigeria, how to get a job in nigeria, how to get a job in tech in nigeria, job vacancies in nigeria, job recruitment in nigeria, tech jobs in nigeria, learn, become a software developer in nigeria, become a designer in nigeria">
+	<meta property="og:title" content="Frintern - Find and build a career you love">
+	<meta property="og:description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
+	<meta property="og:url" content="https://frintern.com/index.html">
+	<meta property="og:image" content="https://i.imgur.com/XunOlZP.jpg">	
+	<meta property="og:image:type" content="image/jpg">
+	<meta property="og:image:width" content="720">
+	<meta property="og:image:height" content="480">
+	<!-- Twitter metadata -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@MeetFrintern">
+	<meta name="twitter:creator" content="@MeetFrintern">
+	<meta name="twitter:title" content="Frintern - Find and build a career you love">
+	<meta name="twitter:description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
+	<meta name="twitter:image" content="https://i.imgur.com/XunOlZP.jpg">
+
 	<link rel="stylesheet" href="css/style.min.css" />
+	<!-- icons -->
 	<link rel="icon" href="./images/Frintern Icon Logo Revisited.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="194x194" href="./images/favicon-194x194.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="./images/android-chrome-192x192.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
+	<link rel="manifest" href="./images/site.webmanifest">
+	<link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#2b5797">
+	<meta name="theme-color" content="#ffffff">
+	<!-- structured-data markup -->
+	<script type="application/ld+json">
+		{
+			"@context": "http://schema.org",
+			"@type": "Organization",
+			"name": "Frintern",
+			"url": "https://frintern.com/",
+			"logo": "https://frintern.com/images/Frintern%20Full%20Logo%20Revisited.png",
+			"description" : "Frintern is a personalised tech and business career accelerator for the way we work now. Find, grow and land a career you love for free.",
+			"url" : "http://pathfinder.byfrintern.com/quiz",
+			"offers" : {
+				"@type" : "Offer",
+				"price" : "Free"
+			"sameAs": [
+				"https://twitter.com/MeetFrintern",
+				"https://www.instagram.com/MeetFrintern",
+				"https://www.facebook.com/Frintern-150094055708648/",
+				"https://www.linkedin.com/company/frintern"
+			]
+		}
+	</script>
+		
 </head>
 
 <body>
