chore(meta): add google site verification code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Learn Software Development, Design, Management and Digital Marketing Free | Frintern</title>
 	<!-- Don't forget to add your metadata here -->
+	<meta name="google-site-verification" content="L7tjs-aw5i9ge7N7u59MTJXhqEPLeL-sAdy8XQ2tN2w" />
 	<meta name="description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
 	<meta name="keywords" content="how to get into tech, find your fit in tech, find your career fit, find your job fit, career path, digital marketing course, ui/ux course, web development course, project management course, design course, free tech course, free tech pathfinder, jobs in nigeria, how to get a job in nigeria, how to get a job in tech in nigeria, job vacancies in nigeria, job recruitment in nigeria, tech jobs in nigeria, learn, become a software developer in nigeria, become a designer in nigeria, internship in nigeria, andela internship, flutterwave internship, hng internship, graduate, graduate trainee, graduate accelerator, trainee, trainer, accelerator">
 	<meta property="og:title" content="Frintern - Find and build a career you love">
