chore(analytics): add g-tracking code

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 	<title>Learn Software Development, Design, Management and Digital Marketing Free | Frintern</title>
 	<!-- Don't forget to add your metadata here -->
 	<meta name="google-site-verification" content="L7tjs-aw5i9ge7N7u59MTJXhqEPLeL-sAdy8XQ2tN2w" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129715423-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'UA-129715423-1');
+	</script>
 	<meta name="description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
 	<meta name="keywords" content="how to get into tech, find your fit in tech, find your career fit, find your job fit, career path, digital marketing course, ui/ux course, web development course, project management course, design course, free tech course, free tech pathfinder, jobs in nigeria, how to get a job in nigeria, how to get a job in tech in nigeria, job vacancies in nigeria, job recruitment in nigeria, tech jobs in nigeria, learn, become a software developer in nigeria, become a designer in nigeria, internship in nigeria, andela internship, flutterwave internship, hng internship, graduate, graduate trainee, graduate accelerator, trainee, trainer, accelerator">
 	<meta property="og:title" content="Frintern - Find and build a career you love">
@@ -45,14 +54,13 @@
 			"url": "https://frintern.com/",
 			"logo": "https://frintern.com/images/Frintern%20Full%20Logo%20Revisited.png",
 			"description" : "Frintern is a personalised tech and business career accelerator for the way we work now. Find, grow and land a career you love for free.",
-			"url" : "http://pathfinder.byfrintern.com/quiz",
 			"offers" : {
 				"@type" : "Offer",
 				"price" : "Free"
 			"sameAs": [
 				"https://twitter.com/MeetFrintern",
 				"https://www.instagram.com/MeetFrintern",
-				"https://www.facebook.com/Frintern-150094055708648/",
+				"https://www.facebook.com/meetfrintern",
 				"https://www.linkedin.com/company/frintern"
 			]
 		}
