chore(hero): update page header
To make it more understandable.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="container">
 				<div class="hero__content">
 					<div class="hero__content__inner" id="navConverter">
-						<h1 class="hero__title">GET A CAREER YOU LOVE</h1>
+						<h1 class="hero__title">A BETTER WAY TO START YOUR CAREER</h1>
 						<p class="hero__text">Frintern is a personalised tech and business career accelerator for the way we work now.
 							Find, grow and land a career you love at no cost to you.</p>
 						<a href="http://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
