--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			"name": "Frintern",
 			"url": "https://frintern.com/",
 			"logo": "https://frintern.com/images/Frintern%20Full%20Logo%20Revisited.png",
-			"description" : "Frintern is a personalised tech and business career accelerator for the way we work now. Find, grow and land a career you love for free.",
+			"description" : "Frintern is a personalised tech and business career accelerator that helps you learn tech skills in days. Find, grow and land a career you love for free.",
 			"offers" : {
 				"@type" : "Offer",
 				"price" : "Free"
@@ -94,9 +94,9 @@
 			<div class="container">
 				<div class="hero__content">
 					<div class="hero__content__inner" id="navConverter">
-						<h1 class="hero__title">FIND AND BUILD A CAREER THAT SUITS YOU</h1>
-						<p class="hero__text">Frintern is a personalised tech and business career accelerator for the way we work now.
-							Find, grow and land a career you love at no cost to you.</p>
+						<h1 class="hero__title">LEARN TECH CAREER SKILLS IN DAYS</h1>
+						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn tech skills in days.
+							Find, grow and land a tech career that suits you.</p>
 						<a href="http://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 						<a href="#scrollToNext" class="button hero__button">Learn more</a>
 					</div>
