chore(home page): update how-it-works text

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<div class="step__media">
 								<img src="./images/undraw_gift.svg" class="step__image">
 					</div>
-								<p class="step__text">Access free resources and an online community of mentors to help you get this career fast.</p>
+								<p class="step__text">Access free resources, learning labs and an online community of mentors to help you learn fast!</p>
 							</div>
 						</div>
 					</div>
