--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 										<img src="./images/undraw_jobhunt.svg" class="expanded__image">
 				</div>
 										<div class="expanded__content">
-											<h2 class="expanded__title">And You Get A Job</h2>
-											<p class="expanded__text">An internship or paid gigs. Our partner companies trust us to help them grow.
-												We'll be your plug to these companies, help you build your work profile and showcase your skills.</p>
+											<h2 class="expanded__title">And You Get Work Experience</h2>
+											<p class="expanded__text">An internship, paid gigs or a job. Our partner companies trust us to help them grow.
+												We'll be your plug to these companies. To access this opportunity, you need to be a part of our online community</p>
 										</div>
 									</div>
 								</div>
