chore: update text description

--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
 										<img src="./images/undraw_jobhunt.svg" class="expanded__image">
 				</div>
 										<div class="expanded__content">
-											<h2 class="expanded__title">And You Get Work Experience</h2>
-											<p class="expanded__text">An internship, paid gigs or a job. Our partner companies trust us to help them grow.
+											<h2 class="expanded__title">And You Get A Job</h2>
+											<p class="expanded__text">An internship, paid gigs or work experience. Our partner companies trust us to help them grow.
 												We'll be your plug to these companies. To access this opportunity, you need to be a part of our online community</p>
 										</div>
 									</div>
