--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<div class="hero__content__inner" id="navConverter">
 						<h1 class="hero__title">LEARN TECH CAREER SKILLS IN DAYS</h1>
 						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn tech skills in days.
-							Find, grow and land a tech career that suits you.</p>
+							Find and build a tech career that suits you.</p>
 						<a href="http://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 						<a href="#scrollToNext" class="button hero__button">Learn more</a>
 					</div>
