chore(description text): add business career

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	
 	  gtag('config', 'UA-129715423-1');
 	</script>
-	<meta name="description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
+	<meta name="description" content="Frintern is a fast, free and personalised tech and business career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
 	<meta name="keywords" content="how to get into tech, find your fit in tech, find your career fit, find your job fit, career path, digital marketing course, ui/ux course, web development course, project management course, design course, free tech course, free tech pathfinder, jobs in nigeria, how to get a job in nigeria, how to get a job in tech in nigeria, job vacancies in nigeria, job recruitment in nigeria, tech jobs in nigeria, learn, become a software developer in nigeria, become a designer in nigeria, internship in nigeria, andela internship, flutterwave internship, hng internship, graduate, graduate trainee, graduate accelerator, trainee, trainer, accelerator">
 	<meta property="og:title" content="Frintern - Find and build a career you love">
-	<meta property="og:description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
+	<meta property="og:description" content="Frintern is a fast, free and personalised tech and business career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
 	<meta property="og:url" content="https://frintern.com/index.html">
 	<meta property="og:image" content="https://i.imgur.com/XunOlZP.jpg">	
 	<meta property="og:image:type" content="image/jpg">
@@ -30,7 +30,7 @@
 	<meta name="twitter:site" content="@MeetFrintern">
 	<meta name="twitter:creator" content="@MeetFrintern">
 	<meta name="twitter:title" content="Frintern - Find and build a career you love">
-	<meta name="twitter:description" content="Frintern is a fast, free and personalised tech career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
+	<meta name="twitter:description" content="Frintern is a fast, free and personalised tech and business career accelerator. Learn Software Development, Design, Management and Digital Marketing Free.">
 	<meta name="twitter:image" content="https://i.imgur.com/XunOlZP.jpg">
 
 	<link rel="stylesheet" href="css/style.min.css" />
@@ -77,7 +77,7 @@
 				<a href="index.html"><img src="images/Frintern Full Logo Revisited.png" class="logo" /></a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="https://medium.com/frintern/meet-frintern-a-better-way-to-learn-4509754b48ee" target="_blank">ABOUT</a></li>
+						<li><a href="https://link.medium.com/zUm59a9seS" target="_blank">ABOUT</a></li>
 						<li><a href="https://github.com/frintern/skill-checker-testing/issues/new" target="_blank">LEAVE FEEDBACK</a></li>
 						<li><a href="http://pathfinder.byfrintern.com/quiz" target="_blank">START HERE</a></li>
 					</ul>
@@ -95,8 +95,8 @@
 				<div class="hero__content">
 					<div class="hero__content__inner" id="navConverter">
 						<h1 class="hero__title">LEARN TECH CAREER SKILLS IN DAYS</h1>
-						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn tech skills in days.
-							Find and build a tech career that suits you.</p>
+						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn career skills in days.
+							Find and build a career that suits you.</p>
 						<a href="http://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 						<a href="#scrollToNext" class="button hero__button">Learn more</a>
 					</div>
