--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="container">
 				<div class="hero__content">
 					<div class="hero__content__inner" id="navConverter">
-						<h1 class="hero__title">LEARN TECH CAREER SKILLS IN DAYS</h1>
+						<h1 class="hero__title">LEARN TECH & BUSINESS CAREER SKILLS IN DAYS</h1>
 						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn career skills in days.
 							Find and build a career that suits you.</p>
 						<a href="http://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
