fix(login): add login to home page
Change `START HERE` to `LOGIN` to make it easy for return users to log in

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					<ul>
 						<li><a href="https://link.medium.com/zUm59a9seS" target="_blank">ABOUT</a></li>
 						<li><a href="https://github.com/frintern/skill-checker-testing/issues/new" target="_blank">LEAVE FEEDBACK</a></li>
-						<li><a href="http://pathfinder.byfrintern.com/quiz" target="_blank">START HERE</a></li>
+						<li><a href="https://skillguides.byfrintern.com/login" target="_blank">LOGIN</a></li>
 					</ul>
 				</nav>
 				<div class="navbar__menu-mob"><a href="" id="toggle"><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
@@ -97,7 +97,7 @@
 						<h1 class="hero__title">LEARN TECH & BUSINESS CAREER SKILLS IN DAYS</h1>
 						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn career skills in days.
 							Find and build a career that suits you.</p>
-						<a href="http://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
+						<a href="https://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 						<a href="#scrollToNext" class="button hero__button">Learn more</a>
 					</div>
 				</div>
@@ -188,7 +188,7 @@
 									<div class="cta__inner">
 										<h2 class="cta__title">Get started now</h2>
 										<p class="cta__sub cta__sub--center">Click the button below and start your journey to land your dream job.</p>
-										<a href="http://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
+										<a href="https://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 									</div>
 								</div>
 							</div>
