--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 			<div class="container">
 				<div class="hero__content">
 					<div class="hero__content__inner" id="navConverter">
-						<h1 class="hero__title">GET RELEVANT EXPERIENCE FOR A GREAT TECH CAREER</h1>
-						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn career skills in days.
+						<h1 class="hero__title">GET RELEVANT EXPERIENCE. BUILD A GREAT TECH CAREER</h1>
+						<p class="hero__text">Frintern is a personalised tech and business career accelerator that helps you learn tech career skills.
 							Find and build a career that suits you.</p>
 						<a href="https://pathfinder.byfrintern.com/quiz" target="_blank" class="button button__accent">Find your career fit</a>
 						<a href="#scrollToNext" class="button hero__button">Learn more</a>
