--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			"name": "Frintern",
 			"url": "https://frintern.com/",
 			"logo": "https://frintern.com/images/Frintern%20Full%20Logo%20Revisited.png",
-			"description" : "Frintern is a personalised tech and business career accelerator that helps you learn tech skills in days. Find, grow and land a career you love for free.",
+			"description" : "Frintern is a personalised tech and business career accelerator that helps you learn tech skills in days. Find and build a career you love.",
 			"offers" : {
 				"@type" : "Offer",
 				"price" : "Free"
