link to techcareers

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 							<li><a
 									href="https://github.com/frintern/skill-checker-testing/issues/new"
 									target="_blank">LEAVE FEEDBACK</a></li>
-							<li><a href="https://skillguides.byfrintern.com/login" target="_blank">LOGIN</a></li>
+							<li><a href="https://techcareers.byfrintern.com/login" target="_blank">LOGIN</a></li>
 						</ul>
 					</nav>
 					<div class="navbar__menu-mob"><a href="" id="toggle"><svg role="img"
