--- a/index.html
+++ b/index.html
@@ -250,8 +250,7 @@
 			<div class="footer footer--dark">
 				<div class="container">
 					<div class="footer__inner">
-						<a href="index.html" class="footer__textLogo"><img src="images/Frintern
-								Negative Full Logo Revisited.png" class="logo" /></a>
+						<a href="index.html" class="footer__textLogo"><img src="images/Frintern_Negative_Full_Logo_Revisited.png" class="logo" /></a>
 						<div class="footer__data">
 							<div class="footer__data__item">
 								<div class="footer__row">
