change hero title

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				<div class="container">
 					<div class="hero__content">
 						<div class="hero__content__inner" id="navConverter">
-							<h2 class="hero__title">Helping You Build a Tech Career</h2>
+							<h1 class="hero__title">Build a Career in Tech</h1>
 							<p class="hero__text">Frintern is a personalised tech and business career
 								accelerator that helps you learn tech career skills.
 								Find and build a career that suits you.</p>
