update hero text

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					<div class="hero__content">
 						<div class="hero__content__inner" id="navConverter">
 							<h1 class="hero__title">Find and build a career in Tech</h1>
-							<p class="hero__text">We help young talented people in Africa find jobs in Africa and Europe.</p>
+							<p class="hero__text">We help young talented people in Africa find jobs in Africa and Europe through personalised learning and mentorship.</p>
 							<a href="https://pathfinder.byfrintern.com/quiz" target="_blank"
 								class="button button__accent">Find your career fit</a>
 							<a href="#scrollToNext" class="button hero__button">Learn more</a>
