update home page

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 			<div class="steps landing__section">
 				<div class="container">
 					<h2>How it works</h2>
-					<!-- <p>Frintern finds you a tech or business career that suits you based on your interests. Connects you with microlearning resources, tasks and a support community of mentors to help you learn these skills in days. Builds your portfolio, work experience and gets you the best possible job or an internship. At no monetary cost to you.</p> -->
+					<p>Frintern finds you a tech or business career that suits you based on your interests. Connects you with microlearning resources, tasks and a support community of mentors to help you learn these skills in days. Builds your portfolio, work experience and gets you the best possible job or an internship. At no monetary cost to you.</p>
 				</div>
 				<div class="container">
 					<div class="steps__inner">
@@ -237,10 +237,9 @@
 				<div class="container">
 					<div class="cta__inner">
 						<h2 class="cta__title">Get started now</h2>
-						<p class="cta__sub cta__sub--center">Click the button below and start your
-							journey to land your dream job.</p>
+						<p class="cta__sub cta__sub--center">We help you find what you could be doing in tech.</p>
 						<a href="https://pathfinder.byfrintern.com/quiz" target="_blank"
-							class="button button__accent">Find your career fit</a>
+							class="button button__accent">Discover your career fit</a>
 					</div>
 				</div>
 			</div>
