--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 				<div class="container">
 					<div class="hero__content">
 						<div class="hero__content__inner" id="navConverter">
-							<h1 class="hero__title">Advance your potential in Tech</h1>
-							<p class="hero__text">We help individuals gain valuable valuable work experience through real projects.</p>
+							<h1 class="hero__title">Advance your Potential in Tech</h1>
+							<p class="hero__text">We help individuals gain valuable work experience through real projects and mentorship.</p>
 							<a href="https://pathfinder.byfrintern.com/quiz" target="_blank"
 								class="button button__accent">Find your career fit</a>
 							<a href="#scrollToNext" class="button hero__button">Learn more</a>
